Updating test notebook

--- a/test/00-test.ipynb
+++ b/test/00-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 260,
    "id": "6a3bce1d",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 261,
    "id": "d2691319",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 262,
    "id": "495237de",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 263,
    "id": "a8648431",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 264,
    "id": "de11a490",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 265,
    "id": "68acfdbd",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 266,
    "id": "59a4bca2",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 271,
    "id": "0bc71e87",
    "metadata": {},
    "outputs": [
@@ -102,55 +102,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.015000000000000013 [ True  True  True  True False False False False  True  True]\n",
       "thresholds: [0.  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9]\n",
-      "priors    : [0.02 0.02 0.02 0.02 0.3  0.3  0.3  0.01 0.02 0.02]\n"
+      "priors    : [0.  0.  0.  0.  0.3 0.3 0.3 0.1 0.  0. ]\n"
      ]
     }
    ],
    "source": [
-    "threshold_true = 0.3\n",
-    "Y_true = X > threshold_true\n",
-    "\n",
     "thresholds = np.arange(threshold_min, threshold_max, 0.1).round(1)\n",
     "\n",
     "priors = np.zeros_like(thresholds)\n",
     "priors[4] = 0.3\n",
     "priors[5] = 0.3\n",
     "priors[6] = 0.3\n",
-    "priors[7] = 0.01\n",
+    "priors[7] = 0.1\n",
     "balance_priors(priors)\n",
     "assert np.sum(priors) == 1\n",
     "\n",
-    "print(f\"thresholds: {thresholds.round(2)}\")\n",
-    "print(f\"priors    : {priors.round(2)}\")"
+    "print(f\"thresholds: {thresholds}\")\n",
+    "print(f\"priors    : {priors}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 272,
    "id": "8526587e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.] [0.]\n",
-      "[0.1] [0.]\n",
-      "[0.2] [0.]\n",
-      "[0.3] [0.]\n",
-      "[0.4] [1.]\n",
-      "[0.5] [1.]\n",
-      "[0.6] [1.]\n",
-      "[0.7] [1.]\n",
-      "[0.8] [0.]\n",
-      "[0.9] [0.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
+    "threshold_true = 0.3\n",
+    "Y_true = X > threshold_true\n",
     "\n",
     "partitions = [[0], [1], [2], [3], [4], [5], [6], [7], [8], [9]]\n",
     "\n",
@@ -174,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 275,
    "id": "3ef877fd",
    "metadata": {},
    "outputs": [
@@ -1025,6 +1005,14 @@
    "source": [
     "px.line(x=thresholds, y=accuracy_loss, labels={\"x\": \"threshold\", \"y\": \"accuracy_loss\"}, markers=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6412eeee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
