--- a/test/00-test.ipynb
+++ b/test/00-test.ipynb
@@ -23,17 +23,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
-   "id": "495237de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_agents = 10_000\n",
-    "threshold_min, threshold_max, threshold_delta = 0., 1., 1e-3"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 263,
    "id": "a8648431",
    "metadata": {},
@@ -84,17 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "id": "59a4bca2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.random.uniform(size=num_agents)"
+    "num_agents = 10_000\n",
+    "threshold_min, threshold_max, threshold_delta = 0., 1., 1e-3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": null,
    "id": "0bc71e87",
    "metadata": {},
    "outputs": [
@@ -108,6 +98,7 @@
     }
    ],
    "source": [
+    "X = np.random.uniform(size=num_agents)\n",
     "thresholds = np.arange(threshold_min, threshold_max, 0.1).round(1)\n",
     "\n",
     "priors = np.zeros_like(thresholds)\n",
