Added randomized balancing to priors

--- a/test/00-test.ipynb
+++ b/test/00-test.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 301,
    "id": "6a3bce1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import plotly.express as px"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 293,
    "id": "d2691319",
    "metadata": {},
    "outputs": [],
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 294,
    "id": "a8648431",
    "metadata": {},
    "outputs": [],
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 295,
    "id": "de11a490",
    "metadata": {},
    "outputs": [],
@@ -56,24 +57,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 296,
    "id": "68acfdbd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def balance_priors(priors):\n",
+    "def balance_priors(priors, random=False):\n",
     "    total = np.sum(priors)\n",
     "    if total == 1:\n",
     "        return priors\n",
     "    indices = priors == 0\n",
     "    remainder = 1 - total\n",
-    "    p = remainder / indices.sum()\n",
-    "    priors[indices] = p"
+    "    if random:\n",
+    "        p = np.random.rand(indices.sum())\n",
+    "        p = (p / p.sum()) * remainder\n",
+    "    else:\n",
+    "        p = remainder / indices.sum()\n",
+    "    priors[indices] = p\n",
+    "    return priors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 297,
    "id": "59a4bca2",
    "metadata": {},
    "outputs": [],
@@ -84,17 +90,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 303,
    "id": "0bc71e87",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "thresholds: [0.  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9]\n",
-      "priors    : [0.  0.  0.  0.  0.3 0.3 0.3 0.1 0.  0. ]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>threshold</th>\n",
+       "      <th>priors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.036</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   threshold  priors\n",
+       "0        0.0   0.036\n",
+       "1        0.1   0.033\n",
+       "2        0.2   0.049\n",
+       "3        0.3   0.068\n",
+       "4        0.4   0.050\n",
+       "5        0.5   0.300\n",
+       "6        0.6   0.300\n",
+       "7        0.7   0.100\n",
+       "8        0.8   0.028\n",
+       "9        0.9   0.036"
+      ]
+     },
+     "execution_count": 303,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -102,20 +198,19 @@
     "thresholds = np.arange(threshold_min, threshold_max, 0.1).round(1)\n",
     "\n",
     "priors = np.zeros_like(thresholds)\n",
-    "priors[4] = 0.3\n",
+    "priors[4] = 0.05\n",
     "priors[5] = 0.3\n",
     "priors[6] = 0.3\n",
     "priors[7] = 0.1\n",
-    "balance_priors(priors)\n",
+    "balance_priors(priors, random=True)\n",
     "assert np.sum(priors) == 1\n",
     "\n",
-    "print(f\"thresholds: {thresholds}\")\n",
-    "print(f\"priors    : {priors}\")"
+    "pd.DataFrame({\"threshold\": thresholds, \"priors\": priors}).round(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 299,
    "id": "8526587e",
    "metadata": {},
    "outputs": [],
@@ -145,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 300,
    "id": "3ef877fd",
    "metadata": {},
    "outputs": [
@@ -177,7 +272,7 @@
          },
          "xaxis": "x",
          "y": {
-          "bdata": "YTJVMCqpQz9hMlUwKqlDP2EyVTAqqUM/YTJVMCqpQz9aZDvfT43TP1pkO99PjdM/WmQ730+N0z9aZDvfT43TP2EyVTAqqUM/YTJVMCqpQz8=",
+          "bdata": "YTJVMCqpQz9hMlUwKqlDP2EyVTAqqUM/YTJVMCqpQz9aZDvfT43TP1pkO99PjdM/WmQ730+N0z9aZDvfT43TP1pkO99PjdM/WmQ730+N0z8=",
           "dtype": "f8"
          },
          "yaxis": "y"
