Added randomized balancing to priors

--- a/test/00-test.ipynb
+++ b/test/00-test.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": null,
    "id": "0bc71e87",
    "metadata": {},
    "outputs": [
@@ -202,6 +202,8 @@
     "priors[5] = 0.3\n",
     "priors[6] = 0.3\n",
     "priors[7] = 0.1\n",
+    "# Set `random=True` to randomly distribute the remaining probabilities\n",
+    "# Set `random=False` to evenly distribute the remaining probabilities\n",
     "balance_priors(priors, random=True)\n",
     "assert np.sum(priors) == 1\n",
     "\n",
